fix - Fixed the supporters logos squishing together

--- a/css/creative.css
+++ b/css/creative.css
@@ -1000,6 +1000,8 @@ section.features .feature-item i {
 }
 .sponsors-item {
   list-style-type: none;
+  margin-left: 20px;
+  margin-right: 20px;
   transition: all ease-in 0.3s;
 }
 .sponsors-funders .sponsors-item,
@@ -1022,7 +1024,6 @@ section.features .feature-item i {
 .sponsors-supporters .sponsors-item:nth-child(3),
 .sponsors-supporters .sponsors-item:nth-child(4),
 .sponsors-supporters .sponsors-item:nth-child(5) {
-  margin-bottom: 0;
   height: 200px;
 }
 .sponsors-link {
@@ -1037,16 +1038,28 @@ section.features .feature-item i {
 .image-vertical {
   display: none;
 }
-@media (max-width: 1220px) {
+.sponsors-image-slye {
+  height: 150%;
+  display: block;
+}
+.sponsors-image-laidlaw {
+  height: 150%;
+  display: block;
+}
+@media (max-width: 1296px) {
   .sponsors-supporters .sponsors-item:nth-child(3),
-  .sponsors-supporters .sponsors-item:nth-child(4) {
+  .sponsors-supporters .sponsors-item:nth-child(4){
     height: 300px;
-    height: 250px;
+    width: 300px;
+  }
+  .sponsors-supporters .sponsors-item:nth-child(5) {
+    width: 200px;
+    height: 200px;
   }
   .sponsors-supporters .sponsors-item:nth-child(3),
   .sponsors-supporters .sponsors-item:nth-child(4),
   .sponsors-supporters .sponsors-item:nth-child(5) {
-    margin: 0 200px 100px;
+    margin: 0 200px 50px;
   }
 }
 @media (max-width:1000px) {
@@ -1059,14 +1072,29 @@ section.features .feature-item i {
 @media (max-width: 770px) {
   .sponsors-item {
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
+  .sponsors-supporters .sponsors-item:nth-child(3),
+  .sponsors-supporters .sponsors-item:nth-child(4) {
+    width: 300px;
+  }
+}
 
+@media (max-width: 716px) {
   .sponsors-supporters .sponsors-item:nth-child(3),
   .sponsors-supporters .sponsors-item:nth-child(4),
   .sponsors-supporters .sponsors-item:nth-child(5) {
-    flex: 0 0 51%;
-    width: 200px;
     margin: 0 0 50px;
+  }
+  .sponsors-supporters .sponsors-item:nth-child(5) {
+    width: 300px;
+  }
+}
+
+@media (max-width: 616px) {
+  .sponsors-supporters .sponsors-item:nth-child(5) {
+    width: 200px;
   }
 }
 
@@ -1094,6 +1122,11 @@ section.features .feature-item i {
   .sponsors-supporters .sponsors-item:nth-child(1),
   .sponsors-supporters .sponsors-item:nth-child(2) {
     width: 350px;
+  }
+  .sponsors-supporters .sponsors-item:nth-child(3),
+  .sponsors-supporters .sponsors-item:nth-child(4) {
+    width: 250px;
+    height: 250px;
   }
 }
 
